--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -442,6 +442,7 @@ plugins:                          # plugin list (sorted by priority)
   - gzip                           # priority: 995
   - server-info                    # priority: 990
   - traffic-split                  # priority: 966
+  - mixmicro-swim-lane-traffic-split # priority: 966
   - redirect                       # priority: 900
   - response-rewrite               # priority: 899
   - kafka-proxy                    # priority: 508
